# azauto

./: .gitignore  README.md  pyproject.toml
scraper/: __main__.py  data.html  lister.py  teste.py
scraper/meli/: functions.py
scraper/suportebuy/: functions.py
